2007-08-26  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: make Add label translatable,
	http://bugzilla.gnome.org/show_bug.cgi?id=470516

2007-08-14  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: disabling "delete" button for
	number of selected layouts < 1.
	http://bugzilla.gnome.org/show_bug.cgi?id=466749

2007-07-24  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties.glade:
	eliminating up/down buttons in the layout list, making it look nicer.

2007-07-23  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: Implementing DND in the selected
	layouts list. http://bugzilla.gnome.org/show_bug.cgi?id=351936

2007-07-11  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
	improving the layout and sorting, thanks to Christian,
	http://bugzilla.gnome.org/show_bug.cgi?id=455353
	* gnome-keyboard-properties.glade: s/group/layout/ - because
	xkeyboard-config is going to have all UI strings as "layout".
	* gnome-keyboard-properties-xkblt.c: redraw the selected layouts
	window when "Separate layout per window" is toggled - otherwise
	"Default" radios are not repainted

2007-05-19  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c: make things buildable with
	libxklavier 3.2
	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkbltadd.c: XklConfigItem is a GObject, so
	it has to be properly built (not on the stack but in heap)

2007-05-17  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c, gnome-keyboard-properties.glade:
	adding vendor list to the box (option, if there are vendors in
	base.xml)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.c: (create_dialog):
	* gnome-keyboard-properties.glade: set button images via code instead